# one-mind

./: .gitignore  README.md
ai-trade-sources/OpenAITrade/: .gitignore  LICENSE  README.md  pyproject.toml
ai-trade-sources/OpenAITrade/configs/: backtest.yaml  brokers.yaml  full_demo.yaml  risk.yaml  sma_backtest.yaml
ai-trade-sources/OpenAITrade/data/market_data/: btc.csv  eth.csv  gld.csv  hsi.csv  iwm.csv  qqq.csv  spy.csv  tencent.csv  tlt.csv
ai-trade-sources/OpenAITrade/docs/: BACKTESTING.md  DATA_SOURCES_FULL.md  LIVE_TRADING.md  README.md  STRATEGIES.md  broker_adapters.md  data_sources.md  strategy_pack_standard.md  strategy_pack_template.md
ai-trade-sources/OpenAITrade/en/: README.md
ai-trade-sources/OpenAITrade/en/docs/: BACKTESTING.md  LIVE_TRADING.md  README.md  STRATEGIES.md  data_sources.md
ai-trade-sources/OpenAITrade/examples/: generate_demo_snapshot.py  generate_social_preview.py  health_check.py  optimize.py  quickstart.py  real_data_strategy_validation.py
ai-trade-sources/OpenAITrade/openaitrade/: __init__.py
ai-trade-sources/OpenAITrade/openaitrade/backtest/: engine.py  metrics.py
ai-trade-sources/OpenAITrade/openaitrade/data/: __init__.py  akshare_adapter.py  baostock_adapter.py  base.py  ccxt_adapter.py  factory.py  openbb_adapter.py  (+1 more)
ai-trade-sources/OpenAITrade/tests/: test_data_health_tools.py  test_data_suite.py  test_metrics_suite.py  test_public_bundle.py  test_real_market_data_suite.py  test_skill_installation.py  test_strategy_suite.py  test_workflow_bundle.py
ai-trade-sources/OpenAITrade/zh/: README.md
(+96 files in other folders)
